# jvm-class-builder

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  hello-world.cpp
include/jvm/: attribute-code.h  attribute.h  class-file-element.h  class.h  constant-class.h  constant-double.h  constant-fieldref.h  constant-float.h  constant-integer.h  constant-interface-methodref.h  constant-long.h  constant-methodref.h  constant-name-and-type.h  constant-string.h  constant-utf-8-info.h  constant.h  descriptor-field.h  descriptor-method.h  descriptor.h  exception-handler.h  field.h  instruction-jump.h  instruction-ldc.h  instruction-value.h  instruction-with-constant.h  instruction.h  label.h  method.h  owner-aware.h  serializable.h
include/jvm/internal/: descriptor-utils.h  utils.h
src/: attribute-code.cpp  attribute.cpp  class.cpp  class.h  constant-class.cpp  constant-class.h  constant-double.cpp  constant-fieldref.cpp  constant-float.cpp  constant-integer.cpp  constant-interface-methodref.cpp  constant-interface-methodref.h  constant-long.cpp  constant-long.h  constant-methodref.cpp  constant-methodref.h  constant-name-and-type.cpp  constant-name-and-type.h  constant-string.cpp  constant-string.h  constant-utf-8-info.cpp  constant.cpp  constant.h  descriptor-field.cpp  descriptor-method.cpp  exception-handler.cpp  exception-handler.h  field.cpp  instruction-jump.cpp  instruction-ldc.cpp  instruction-value.h  instruction-with-constant.cpp  instruction.cpp  instruction.h  label.cpp  label.h  method.cpp  method.h  utils.cpp
src/internal/: descriptor-utils.cpp  jvm-manager.cpp  jvm-manager.h  utils.cpp  utils.h
